[SOUP] NetworkProcessSoup does not initialize CacheOptions correctly https://bugs.webkit.org/show_bug.cgi?id=200886

Reviewed by Philippe Normand.

r247567 wrongly initializes CacheOptions in a local variable that is never used
instead of using NetworkProcess's member variable, that is later used by the
NetworkSession to initialize the cache.

* NetworkProcess/soup/NetworkProcessSoup.cpp:
(WebKit::NetworkProcess::platformInitializeNetworkProcess):


Canonical link: https://commits.webkit.org/214737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248999 268f45cc-cd09-0410-ab3c-d52691b4dbfc